# skinflame

./: .gitignore  CITATION.cff  CONTRIBUTING.md  JOSS_SUBMISSION.md  LICENSE  PUBLISHING.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
demo/: streamlit_app.py
docs/: quickstart.md  theory.md
src/skinflame/: __init__.py  cli.py  core.py  dag.py  data.py  hima.py  pathway.py  plots.py  utils.py
tests/: test_core.py  test_dag.py  test_hima.py  test_pathway.py  test_utils.py
